--- a/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj
+++ b/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="DoublyLinkedLink.h" />
     <ClInclude Include="LinkListIterator.h" />
     <ClInclude Include="LinkNode.h" />
+    <ClInclude Include="PriorityQueue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
