--- a/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj.filters
+++ b/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="DoublyLinkedLink.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PriorityQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
