--- a/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj
+++ b/GAME2001_Assignment2_RagusaGiuseppe/GAME2001_Assignment2_RagusaGiuseppe.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AssertHelper.h" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
